--- a/index.html
+++ b/index.html
@@ -30,7 +30,39 @@
     </header>
 
     <main>
-        <img src="./img/1.webp" alt="jflkdsaj">
+        <div class="row flex-container">
+            <div class="card">
+                <img src="./img/1.webp" alt="img1">
+                <div class="heart"><i class="fa-solid fa-heart"></i></div>
+            </div>
+
+            <div class="card">
+                <img src="./img/1.webp" alt="img1">
+                <div class="heart"><i class="fa-solid fa-heart"></i></div>
+            </div>
+
+            <div class="card">
+                <img src="./img/1.webp" alt="img1">
+                <div class="heart"><i class="fa-solid fa-heart"></i></div>
+            </div>
+        </div>
+
+        <div class="row flex-container">
+            <div class="card">
+                <img src="./img/1.webp" alt="img1">
+                <div class="heart"><i class="fa-solid fa-heart"></i></div>
+            </div>
+
+            <div class="card">
+                <img src="./img/1.webp" alt="img1">
+                <div class="heart"><i class="fa-solid fa-heart"></i></div>
+            </div>
+
+            <div class="card">
+                <img src="./img/1.webp" alt="img1">
+                <div class="heart"><i class="fa-solid fa-heart"></i></div>
+            </div>
+        </div>
     </main>
 
     <footer>
