--- a/index.html
+++ b/index.html
@@ -34,16 +34,44 @@
             <div class="card">
                 <img src="./img/1.webp" alt="img1">
                 <div class="heart"><i class="fa-solid fa-heart"></i></div>
+                <div class="tag">
+                    <div class="discount">-50%</div>
+                    <div class="sustainability">Sostenibilità</div>
+                </div>
+                <div class="bot-card">
+                    <div class="brand">Levi's</div>
+                    <div class="description">RELAXED FIT TEE UNISEX</div>
+                    <div class="prices after">14,99 €</div>
+                    <div class="prices before">29,99 €</div>
+                </div>
             </div>
 
             <div class="card">
                 <img src="./img/1.webp" alt="img1">
                 <div class="heart"><i class="fa-solid fa-heart"></i></div>
+                <div class="tag">
+                    <div class="discount">-50%</div>
+                </div>
+                <div class="bot-card">
+                    <div class="brand">Levi's</div>
+                    <div class="description">RELAXED FIT TEE UNISEX</div>
+                    <div class="prices after">14,99 €</div>
+                    <div class="prices before">29,99 €</div>
+                </div>
             </div>
 
             <div class="card">
                 <img src="./img/1.webp" alt="img1">
                 <div class="heart"><i class="fa-solid fa-heart"></i></div>
+                <div class="tag">
+                    <div class="discount">-50%</div>
+                </div>
+                <div class="bot-card">
+                    <div class="brand">Levi's</div>
+                    <div class="description">RELAXED FIT TEE UNISEX</div>
+                    <div class="prices after">14,99 €</div>
+                    <div class="prices before">29,99 €</div>
+                </div>
             </div>
         </div>
 
@@ -51,16 +79,41 @@
             <div class="card">
                 <img src="./img/1.webp" alt="img1">
                 <div class="heart"><i class="fa-solid fa-heart"></i></div>
+                <div class="tag">
+                    <div class="discount">-50%</div>
+                    <div class="sustainability">Sostenibilità</div>
+                </div>
+                <div class="bot-card">
+                    <div class="brand">Levi's</div>
+                    <div class="description">RELAXED FIT TEE UNISEX</div>
+                    <div class="prices after">14,99 €</div>
+                    <div class="prices before">29,99 €</div>
+                </div>
             </div>
 
             <div class="card">
                 <img src="./img/1.webp" alt="img1">
                 <div class="heart"><i class="fa-solid fa-heart"></i></div>
+                <div class="bot-card">
+                    <div class="brand">Levi's</div>
+                    <div class="description">RELAXED FIT TEE UNISEX</div>
+                    <div class="prices after">14,99 €</div>
+                    <div class="prices before">29,99 €</div>
+                </div>
             </div>
 
             <div class="card">
                 <img src="./img/1.webp" alt="img1">
                 <div class="heart"><i class="fa-solid fa-heart"></i></div>
+                <div class="tag">
+                    <div class="sustainability">Sostenibilità</div>
+                </div>
+                <div class="bot-card">
+                    <div class="brand">Levi's</div>
+                    <div class="description">RELAXED FIT TEE UNISEX</div>
+                    <div class="prices after">14,99 €</div>
+                    <div class="prices before">29,99 €</div>
+                </div>
             </div>
         </div>
     </main>
