finito senza hover

--- a/index.html
+++ b/index.html
@@ -47,37 +47,37 @@
             </div>
 
             <div class="card">
-                <img src="./img/1.webp" alt="img1">
+                <img src="./img/2.webp" alt="img2">
                 <div class="heart"><i class="fa-solid fa-heart"></i></div>
                 <div class="tag">
-                    <div class="discount">-50%</div>
+                    <div class="discount">-30%</div>
                 </div>
                 <div class="bot-card">
-                    <div class="brand">Levi's</div>
-                    <div class="description">RELAXED FIT TEE UNISEX</div>
-                    <div class="prices after">14,99 €</div>
+                    <div class="brand">Guess</div>
+                    <div class="description">ROSES TEE</div>
+                    <div class="prices after">20,99 €</div>
                     <div class="prices before">29,99 €</div>
                 </div>
             </div>
 
             <div class="card">
-                <img src="./img/1.webp" alt="img1">
+                <img src="./img/3.webp" alt="img3">
                 <div class="heart"><i class="fa-solid fa-heart"></i></div>
                 <div class="tag">
-                    <div class="discount">-50%</div>
+                    <div class="discount">-30%</div>
                 </div>
                 <div class="bot-card">
-                    <div class="brand">Levi's</div>
-                    <div class="description">RELAXED FIT TEE UNISEX</div>
-                    <div class="prices after">14,99 €</div>
-                    <div class="prices before">29,99 €</div>
+                    <div class="brand">Come Zucchero Filato</div>
+                    <div class="description">VOGLIA DI COLORI PASTELLO</div>
+                    <div class="prices after">129,99 €</div>
+                    <div class="prices before">184,99 €</div>
                 </div>
             </div>
         </div>
 
         <div class="row flex-container">
             <div class="card">
-                <img src="./img/1.webp" alt="img1">
+                <img src="./img/4.webp" alt="img4">
                 <div class="heart"><i class="fa-solid fa-heart"></i></div>
                 <div class="tag">
                     <div class="discount">-50%</div>
@@ -85,41 +85,61 @@
                 </div>
                 <div class="bot-card">
                     <div class="brand">Levi's</div>
-                    <div class="description">RELAXED FIT TEE UNISEX</div>
+                    <div class="description">TEE UNISEX</div>
                     <div class="prices after">14,99 €</div>
                     <div class="prices before">29,99 €</div>
                 </div>
             </div>
 
             <div class="card">
-                <img src="./img/1.webp" alt="img1">
+                <img src="./img/5.webp" alt="img5">
                 <div class="heart"><i class="fa-solid fa-heart"></i></div>
                 <div class="bot-card">
-                    <div class="brand">Levi's</div>
-                    <div class="description">RELAXED FIT TEE UNISEX</div>
-                    <div class="prices after">14,99 €</div>
-                    <div class="prices before">29,99 €</div>
+                    <div class="brand">Maya Deluxe</div>
+                    <div class="description">STRIPE BODICE</div>
+                    <div class="prices after">99,99 €</div>
                 </div>
             </div>
 
             <div class="card">
-                <img src="./img/1.webp" alt="img1">
+                <img src="./img/6.webp" alt="img6">
                 <div class="heart"><i class="fa-solid fa-heart"></i></div>
                 <div class="tag">
                     <div class="sustainability">Sostenibilità</div>
                 </div>
                 <div class="bot-card">
-                    <div class="brand">Levi's</div>
-                    <div class="description">RELAXED FIT TEE UNISEX</div>
-                    <div class="prices after">14,99 €</div>
-                    <div class="prices before">29,99 €</div>
+                    <div class="brand">Esprit</div>
+                    <div class="description">MAGLIONE - BLACK</div>
+                    <div class="prices after">29,99 €</div>
                 </div>
             </div>
         </div>
     </main>
 
     <footer>
-
+        <div class="footer flex-container">
+            <div class="info">
+                <div>Boolando s.r.l</div>
+                <div class="links">
+                    <a href="#">Informazioni legali</a>
+                    <a href="#">Informativa sulla privacy</a>
+                    <a href="#">Diritto di recesso</a>
+                </div>
+            </div>
+            
+            <div class="social">
+                <div>
+                    Trovaci anche su
+                </div>
+                <div class="buttons">
+                    <a href="#"><i class="fa-brands fa-twitter-square"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook-square"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram-square"></i></a>
+                    <a href="#"><i class="fa-brands fa-pinterest-square"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube-square"></i></a>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
