--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     <main>
         <div class="row flex-container">
             <div class="card">
-                <img src="./img/1.webp" alt="img1">
+                <div class="image">
+                    <img src="./img/1.webp" alt="img1">
+                    <img src="./img/1b.webp" alt="img1" class="image-hover">
+                </div>
                 <div class="heart"><i class="fa-solid fa-heart"></i></div>
                 <div class="tag">
                     <div class="discount">-50%</div>
@@ -47,7 +50,10 @@
             </div>
 
             <div class="card">
-                <img src="./img/2.webp" alt="img2">
+                <div class="image">
+                    <img src="./img/2.webp" alt="img2">
+                    <img src="./img/2b.webp" alt="img2" class="image-hover">
+                </div>
                 <div class="heart"><i class="fa-solid fa-heart"></i></div>
                 <div class="tag">
                     <div class="discount">-30%</div>
@@ -61,7 +67,10 @@
             </div>
 
             <div class="card">
-                <img src="./img/3.webp" alt="img3">
+                <div class="image">
+                    <img src="./img/3.webp" alt="img3">
+                    <img src="./img/3b.webp" alt="img3" class="image-hover">
+                </div>
                 <div class="heart"><i class="fa-solid fa-heart"></i></div>
                 <div class="tag">
                     <div class="discount">-30%</div>
@@ -77,7 +86,10 @@
 
         <div class="row flex-container">
             <div class="card">
-                <img src="./img/4.webp" alt="img4">
+                <div class="image">
+                    <img src="./img/4.webp" alt="img4">
+                    <img src="./img/4b.webp" alt="img4" class="image-hover">
+                </div>
                 <div class="heart"><i class="fa-solid fa-heart"></i></div>
                 <div class="tag">
                     <div class="discount">-50%</div>
@@ -92,7 +104,10 @@
             </div>
 
             <div class="card">
-                <img src="./img/5.webp" alt="img5">
+                <div class="image">
+                    <img src="./img/5.webp" alt="img5">
+                    <img src="./img/5b.webp" alt="img5" class="image-hover">
+                </div>
                 <div class="heart"><i class="fa-solid fa-heart"></i></div>
                 <div class="bot-card">
                     <div class="brand">Maya Deluxe</div>
@@ -102,7 +117,10 @@
             </div>
 
             <div class="card">
-                <img src="./img/6.webp" alt="img6">
+                <div class="image">
+                    <img src="./img/6.webp" alt="img6">
+                    <img src="./img/6b.webp" alt="img6" class="image-hover">
+                </div>
                 <div class="heart"><i class="fa-solid fa-heart"></i></div>
                 <div class="tag">
                     <div class="sustainability">Sostenibilità</div>
